# MotorKit

./: .gitignore  README.md
Docs/Control/: 编码器特性对照表.xlsx
Firmware/: .gitignore  CMakeLists.txt  syscalls.c
Firmware/Board/v3/: board.cpp
Firmware/Board/v3/Inc/: board.h  can.h  main.h
Firmware/Board/v3/Src/: adc.c  can.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c  usbd_cdc_if.c
Firmware/Drivers/DRV8301/: drv8301.cpp
Firmware/Drivers/STM32/: stm32_gpio.cpp  stm32_gpio.hpp  stm32_spi_arbiter.cpp  stm32_spi_arbiter.hpp
Firmware/MotorControl/: arm_cos_f32.c  arm_sin_f32.c  axis.cpp  axis.hpp  component.hpp  controller.cpp  controller.hpp  encoder.cpp  encoder.hpp  endstop.cpp  endstop.hpp  foc.cpp  low_level.cpp  low_level.h  main.cpp  mechanical_brake.cpp  mechanical_brake.hpp  motor.cpp  motor.hpp  nvm_config.hpp  odrive_main.h  oscilloscope.hpp  phase_control_law.hpp  pwm_input.cpp  pwm_input.hpp  sensorless_estimator.cpp  thermistor.cpp  thermistor.hpp  trapTraj.cpp  utils.cpp  utils.hpp
Firmware/autogen/: endpoints.hpp  function_stubs.hpp  interfaces.hpp  type_info.hpp  version.c
Firmware/communication/: ascii_protocol.cpp  ascii_protocol.hpp  communication.cpp  interface_uart.cpp  interface_usb.cpp  shell_device.c  shell_device.h  shell_qq.c  shell_qq.h
Firmware/communication/can/: can_simple.cpp  odrive_can.cpp  odrive_can.hpp
Firmware/fibre_cpp/: legacy_protocol.cpp  legacy_protocol.hpp  libfibre.cpp-template
HardWare/: BOM.dxf  EDG.dxf  TOP.dxf  ibom.html
HardWare/AS5047P/: AS5047P_BOM.dxf  AS5047P_EDG.dxf  AS5047P_TOP.dxf
HardWare/AS5047P/HardWare/: AS5047P.kicad_pcb  AS5047P.kicad_prl  AS5047P.kicad_pro  AS5047P.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
HardWare/Gerber/: MotorKit-B_Cu.gbr  MotorKit-B_Mask.gbr  MotorKit-B_Paste.gbr  MotorKit-B_Silkscreen.gbr  MotorKit-Edge_Cuts.gbr  MotorKit-F_Cu.gbr  MotorKit-F_Mask.gbr  MotorKit-F_Paste.gbr  MotorKit-F_Silkscreen.gbr  MotorKit-In1_Cu.gbr  MotorKit-In2_Cu.gbr  MotorKit-NPTH-drl_map.ps  MotorKit-NPTH.drl  MotorKit-PTH-drl_map.ps  MotorKit-PTH.drl  MotorKit-job.gbrjob
HardWare/kiacd_project/: DriverM0.kicad_sch  DriverM1.kicad_sch  MotorKit.kicad_prl  MotorKit.kicad_pro  MotorKit.kicad_sch  Port.kicad_sch  Power.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
